--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -10,6 +10,7 @@
         <% end %>
         <ol>
           <%= question.input :text %>
+          <%= question.input :value %>
           <%= question.input :_destroy, :as => :boolean %>
         </ol>
         <%= render :partial => 'answer_fields', :locals => {:form => question} %>
