--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -28,7 +28,8 @@
           </div>
           <div class="span4">
             <% if current_user.manageable_courses.include? @course %>
-              <%= link_to t('.edit_survey'), edit_survey_path(@survey), :class => 'btn info right small' %>
+              <%= link_to t('.edit_survey'), edit_survey_path(@survey), :class => 'btn info right small' %> - 
+              <%= link_to t('.view_replies'), survey_replies_path(@survey), :class => 'btn info right small' %>
             <% end %>
           </div>
         </div>
