--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="underline">
-  <%= avatar(@user, :small) %>
+  <%= image_tag @user.avatar_file.small.url %>
 </div>
 
 <div class="underline">	
