--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -11,8 +11,8 @@
   </ul>
   <div class="total-members"><%= t('courses.members.count', :count => @course.users.count) %></div>
   <ul class="nav-member-avatars">
-    <% @course.users.each do |avatars| %>
-      <li><%= link_to(avatar(avatars, :xsmall), user_path(avatars), :rel => "tip", :title => avatars.name) %></li>
+    <% @course.users.each do |user| %>
+      <li><%= link_to(image_tag(user.avatar_file.xsmall.url), user_path(user), :rel => "tip", :title => user.name) %></li>
     <% end %>
   </ul>
 </div>
