--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
             <p class="description"><%= @user.role.capitalize %></p>
           </div>
           <div class="span5" style="margin-left:30px;">
-            <% if @user == current_user %>
+            <% if current_user == @user %>
               <%= link_to t('profile.edit_profile'), edit_user_path(@user), :class => "btn info small right" %>
             <% end %>
           </div>
