--- a/app/views/surveys/_survey.html.erb
+++ b/app/views/surveys/_survey.html.erb
@@ -6,7 +6,12 @@
       <%= t('.value') %>: <b><%= survey.value %></b> -
       <%= t('.period') %>: <b><%= survey.period %></b> -
       <%= t('.date_time') %>: <b><%= l survey.due_to, :format => :short %></b>
-      <% if current_user.student? %>
+      <%= current_user.role_for_course(@course) %>
+      <% if current_user.role_for_course(@course) == 'teacher' %>
+        <% if survey.unpublished? %>
+          <%= link_to t('.publish'), publish_survey_path(survey), :class => 'publish-survey' %>
+        <% end %>
+      <% else %>
         <%= link_to t('.answer'), new_survey_reply_path(survey) %>
       <% end %>
     </div>
