--- a/app/views/surveys/_question.html.erb
+++ b/app/views/surveys/_question.html.erb
@@ -1,6 +1,6 @@
 <div class="question padding-all <%= cycle('odd', 'even') %>">
   <h3><%= question.text %></h3>
   <div class="answers padding-all">
-    <%= render :partial => 'answer', :collection => question.answers %>
+    <%= render :partial => 'answer', :collection => question.answers, :locals => {:question => question} %>
   </div>
 </div>
