--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -6,12 +6,9 @@
     <fieldset class="<%= record.new_record? ? :new : nil %> answer">
       <ol>
         <li>
-          <% if record.new_record? %>
-            <%= form.radio_button :answer_position, record.position, :class => 'answer-position' %>
-          <% else %>
-            <%= form.radio_button :answer_uuid, record.uuid %>
-          <% end %>
+          <%= form.radio_button :answer_uuid, record.uuid, :class => 'answer-uuid' %>
         </li>
+        <%= answer.input :uuid, :input_html => {:class => 'answer-uuid'}, :as => :hidden %>
         <%= answer.input :position, :input_html => {:class => 'answer-position'}, :as => :hidden %>
         <%= answer.input :text %>
         <%= answer.input :_destroy, :as => :boolean %>
