fixed bug https://www.pivotaltracker.com/story/show/22664563

--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -1,9 +1,9 @@
 <fieldset class="nested_models answers input no-margin inputs" data-association="answers">
   <legend><%= t('.legend') %></legend>
-  <%- form.object.answers.build %>
+  <%- template_record = form.object.answers.build %>
   <%= form.semantic_fields_for :answers do |answer| %>
     <%- record = answer.object %>
-    <fieldset class="<%= record.new_record? ? :new : nil %> answer">
+    <fieldset class="<%= record == template_record ? :new : nil %> associated answer">
       <ol>
         <li>
           <%= form.radio_button :answer_uuid, record.uuid, :class => 'answer-uuid' %>
