notifications refactored for generating the text on creation

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -52,7 +52,7 @@
           <% @notifications.each do |notification| %>
             <div class='notification'>
               <div class="date-published"><%= time_ago_in_words(notification.created_at) %></div>
-              <%= raw notification_message notification %>
+              <%= raw notification.text %>
             </div>
           <% end %>
           <%= paginate @notifications %>
