--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,8 +1,8 @@
 <%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
     <%= form.inputs :text do %>
-    <%= form.input :text, :input_html => {:rows => 1, :class => "span8", :style =>"height:18px;", :onfocus => "toogleImageComment(this,'"+link_to(avatar(current_user, :xsmall), user_path(current_user))+"')"} %>
+    <%= form.input :text, :input_html => {:rows => 1, :class => "span8", :onfocus => "toogleImageComment(this,'"+link_to(avatar(current_user, :xxsmall), user_path(current_user))+"')"} %>
   <% end %>
   <%= form.buttons do %>
-    <%= form.commit_button :button_html => {:id => :submit, :class => "btn right"} %>
+    <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"} %>
   <% end %>
 <% end %>
