--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -2,7 +2,7 @@
   <ul class="left-nav-main-ul">
     <li>
       <a href="<%= members_for_course_path(@course) %>" class="miembros <%= members_active %>"><%= t('courses.course_menu.members') %>
-        <% unless @course.enrollments.where(:state => 'pending').count == 0 %>
+        <% if current_user.manageable_courses.include?(@course) && @course.enrollments.where(:state => 'pending').count > 0 %>
           <span class="label-tag notifications tip" title="<%= t('courses.requests.pending_requests')%>"><%= @course.enrollments.where(:state => 'pending').count %></span>
         <% end %>
       </a>
