survey reply score expressed in percentage

--- a/app/views/students/survey_replies/show.html.erb
+++ b/app/views/students/survey_replies/show.html.erb
@@ -57,7 +57,7 @@
           
           <% if @reveal_answers %>
             <div>
-              <%= t('survey_reply.score') %>: <%= "%.2f" % @survey_reply.score %> -
+              <%= t('survey_reply.score') %>: <%= @survey_reply.score %>% -
               <%= t('survey_reply.updated') %>: <%= l(@survey_reply.updated_at, :format => :short) %> - 
             </div>
           <% end %>
