--- a/app/views/teachers/survey_replies/index.html.erb
+++ b/app/views/teachers/survey_replies/index.html.erb
@@ -4,7 +4,7 @@
   <div class="reply">
     <%= link_to image_tag(reply.user.avatar_file.xsmall.url), reply.user %>
     <%= link_to reply.user.name, reply.user %> - 
-    <%= t('.score') %>: <%= "%.2f" % reply.score %> -
+    <%= t('.score') %>: <%= reply.score %>% -
     <%= t('.updated') %>: <%= l(reply.updated_at, :format => :short) %> - 
     <%= link_to t('.show'), reply_path(reply) %>
   </div>
