--- a/app/views/surveys/_answer.html.erb
+++ b/app/views/surveys/_answer.html.erb
@@ -1,3 +1,4 @@
 <div class="answer">
-  <input type="radio" disabled="disabled" <%= 'checked="checked"' if current_user.role_for_course(@course) == 'teacher' && answer == question.correct_answer %>/> <%= answer.text %>
+  <input type="radio" disabled="disabled" <%= 'checked="checked"' if current_user.role_for_course(@course) == 'teacher' && answer == question.correct_answer %>/> 
+  <span><%= answer.text %></span>
 </div>
