--- a/app/views/teachers/survey_replies/index.html.erb
+++ b/app/views/teachers/survey_replies/index.html.erb
@@ -1,12 +1,51 @@
-<h1><%= t('.header') %> <%= @survey.name %></h1>
-<%= render :partial => 'courses/course', :locals => {:course => @course} %>
-<% @replies.each do |reply| %>
-  <div class="reply">
-    <%= link_to image_tag(reply.user.avatar_file.xsmall.url), reply.user %>
-    <%= link_to reply.user.name, reply.user %> - 
-    <%= t('.score') %>: <%= reply.score %>% -
-    <%= t('.updated') %>: <%= l(reply.updated_at, :format => :short) %> - 
-    <%= link_to t('.show'), reply_path(reply) %>
-  </div>
-<% end %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, @course) %> <span class="divider">/</span></li>
+          <li><%= link_to(Survey.model_name.human(:count => :many), course_surveys_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active"><%= @survey.name %></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+      
+      <div class="span10">
+        
+        <div class="row bottom-margin">
+          <div class="span9">
+            <h4><%= t('.header') %>:</h4>
+            <h2><%= @survey.name %></h2>
+          </div>
+        </div>
 
+        <div class="surveys">
+          <%= render :partial => 'course', :locals => {:course => @course} %>
+          <% @replies.each do |reply| %>
+            <div class="reply <%= cycle("odd", "even") %>">
+              <%= link_to image_tag(reply.user.avatar_file.xsmall.url), reply.user %>
+              <p><%= link_to reply.user.name, reply.user %> -
+              <%= t('.score') %>: <%= reply.score %>% -
+              <%= t('.updated') %>: <%= l(reply.updated_at, :format => :short) %> - 
+              <%= link_to t('.show'), reply_path(reply) %></p>
+            </div>
+          <% end %>
+        </div>
+        
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+    
+  </div>
+</div>
