--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1875,6 +1875,11 @@ footer {
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
+.btn.round {
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border-radius: 24px;
+}
 .btn.small {
   padding: 7px 9px 7px;
   font-size: 11px;
