--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -10,10 +10,11 @@
         </li>
         <%= answer.input :uuid, :input_html => {:class => 'answer-uuid'}, :as => :hidden %>
         <%= answer.input :position, :input_html => {:class => 'answer-position'}, :as => :hidden %>
-        <%= answer.input :text, :input_html => {:placeholder => t('activerecord.attributes.answer.text'), :class => "span5"} %>
+        <%= answer.input :text, :as => :text, :input_html => {:placeholder => t('activerecord.attributes.answer.text'), :class => "span5", :rows => 3} %>
+        <li class="dragable"><span class="drag" rel="drag_tip" title="<%= t('surveys.drag') %>"><%= t('surveys.drag') %></span></li>
         <%= answer.input :_destroy, :as => :boolean %>
       </ol>
     </fieldset>
   <% end %>
-  <%= link_to t('.add_answer'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
+  <%= link_to t('.add_answer'), '#', :class => 'btn small add_record', :style => 'display:none' %>
 </fieldset>
