[Bug Fix] En los comentarios en una entrega, al comentar no se limpia el campo de comentario [22333149] https://www.pivotaltracker.com/story/show/22333149

--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -58,7 +58,7 @@
 
         <%= render :partial => 'shared/assets_table', :locals => {:record => @delivery} %>
 
-        <div class="well">
+        <div class="actions">
           <h2><%= t('.comment') %></h2>
           <%= render :partial => 'comments/form', :locals => {:commentable => @delivery} %>
         </div>
