--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,11 +4,19 @@
     <div class="row">
       <div class="span16">
         <ul class="breadcrumb">
-          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <% if current_user.supervisor? %>
+            <li><%= link_to(t('.admin'), supervisor_dashboard_path) %> <span class="divider">/</span></li>
+          <% else %>
+            <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <% end %>
           <li>Courses</li>
         </ul>  
       </div>
     </div>
+    
+    <% if current_user.supervisor? %>
+      <%= render :partial => 'supervisor/shared/courses' %>
+    <% else %>
     
     <div class="row">
       <div class="span13">
@@ -32,6 +40,7 @@
         <%= render :partial => "shared/adds" %>
       </div>
     </div>
+    <% end %>
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
