--- a/app/views/supervisor/pending_approvals.html.erb
+++ b/app/views/supervisor/pending_approvals.html.erb
@@ -3,7 +3,8 @@
   <div class="row">
     <div class="span16">
       <ul class="breadcrumb">
-        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %></li>
+        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %> <span class="divider">/</span></li>
+        <li><%= t('supervisor.shared.admin_menu.pending_approvals') %></li>
       </ul>  
     </div>
   </div>
@@ -16,22 +17,29 @@
       </div>
       
       <div class="span9">
+        <h2><%= t('supervisor.shared.admin_menu.pending_approvals') %></h2>
+        
         <div class="users">
           <% @pending.each do |user| %>
             <div class="user padding-all <%= cycle('odd', 'even') %>">
-              <div class="row user pending">
-                <%= user.name %>
-
-                <div>
-                <%= form_tag supervisor_accept_user_path(user.id), :method => :post do |form| %>
-                  <%= submit_tag t('.approve') %>
-                <% end %>
+              <div class="row">
+                <div class="span1" style="margin-left:20px;">
+                  <%= image_tag user.avatar_file.xsmall.url %>
                 </div>
+                <div class="span5-5">
+                  <%= link_to(user.name, user_path(user)) %><br />
+                  <%= mail_to user.email %>
+                </div>
+                <div class="span3-5">
+                  <div class="teacher_aproval">
+                    <%= form_tag supervisor_accept_user_path(user.id), :method => :post do |form| %>
+                      <%= submit_tag t('.approve'), :class => "accept btn success small" %>
+                    <% end %>
 
-                <div style="background-color:red;padding:3px;">
-                <%= form_tag supervisor_reject_user_path(user.id), :method => :post do |form| %>
-                  <%= submit_tag t('.reject') %>
-                <% end %>
+                    <%= form_tag supervisor_reject_user_path(user.id), :method => :post do |form| %>
+                      <%= submit_tag t('.reject'), :class => "reject btn small danger" %>
+                    <% end %>
+                  </div>
                 </div>
               </div>
             </div>
