--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -3,7 +3,8 @@
   <div class="row">
     <div class="span16">
       <ul class="breadcrumb">
-        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %></li>
+        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %> <span class="divider">/</span></li>
+        <li><%= t('courses.members.students') %></li>
       </ul>  
     </div>
   </div>
@@ -16,11 +17,21 @@
       </div>
       
       <div class="span9">
+        <h2><%= t('courses.members.students') %></h2>
+        
         <div class="users students">
           <% @students.each do |student| %>
             <div class="user padding-all <%= cycle('odd', 'even') %>">
-              <div class="row student">
-                <%= link_to student.name, user_path(student) %>
+              <div class="student">
+                <div class="row">
+                  <div class="span1" style="margin-left:20px;">
+                    <%= image_tag student.avatar_file.xsmall.url %>
+                  </div>
+                  <div class="span5">
+                    <%= link_to(student.name, user_path(student)) %><br />
+                    <%= mail_to student.email %>
+                  </div>
+                </div>
               </div>
             </div>
           <% end %>
