--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1576,9 +1576,10 @@ a.menu:after, .dropdown-toggle:after {
   display: block;
 }
 .tabs {
-  float: left;
+/*  float: left; /* cervera commented this for the teachers tabs*/
   width: 100%;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ddd !important;
+  background-color: white;
 }
 .tabs > li {
   position: relative;
